# telescope-server

./: .flake8  .gitignore  .isort.cfg  MANIFEST  README.md  controller.py  motor.py  requirements.txt  setup.cfg  setup.py  telescope-client  telescope-server  telescope.py  test.py
client/: client.py  helper.py  ioclient.py  raspbeery_halt.py
client/ui/: client.glade
common/: protocol.py
init/: README.md  telescoped.default  telescoped.service.in  telescoped.sysv.in
server/: basecontroller.py  controller.py  dummy_controller.py  motor.py  telescope.py
telescope/client/: control.py  ioclient.py
telescope/client/desktop/: telescope-client.desktop
telescope/client/ui/: telescope-client.glade
telescope/common/: protocol.py
telescope/server/: basecontroller.py  controller.py  dummy_controller.py  gpio.py  handler.py  motor.py
telescope/server/default/: telescoped
telescope/server/init.d/: telescoped
telescope/server/plugins/: halt.py  led.py  manual.py  track.py
telescope_server/: basecontroller.py  controller.py  daemon.py  dummy_controller.py  gpio.py  handler.py  motor.py  protocol.py
telescope_server/plugins/: halt.py  led.py  manual.py  track.py
