[metadata]
name = telescope-server
description = The server part of the telescope control
long-description = file: README.md
author = Armin Leuprecht
author-email = mir@mur.at
platforms = Linux
url = https://github.com/mir06/telescope-server
classifiers =
  Development Status :: 5 - Stable
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
keywords = telescope, raspberry pi, stellarium

[options]
zip_safe = True
packages = find:
package_dir =
  = .
setup_requires =
  setuptools_scm

[options.packages.find]
where = .

[options.entry_points]
console_scripts =
  telescope-server = telescope_server.daemon:run

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]
universal = 1
